src/test/ui/feature-gates/feature-gate-doc_cfg-cfg-rustdoc.rs
#[cfg(rustdoc)] //~ ERROR: `cfg(rustdoc)` is experimental and subject to change
pub struct SomeStruct;

fn main() {}
